--- a/README
+++ b/README
@@ -1,1 +1,14 @@
-Felirat
+# DogTitle
+
+It helps you to download easily subtitles. Just drop your videos on the app and it will find the right subtitle for your movies and TV shows.
+
+## Developer Installation
+
+Run the following commands
+
+```
+$ git clone https://github.com/kisPocok/felirat.git
+$ cd felirat/app
+$ npm install
+$ npm start
+```
